@@ -1,3 +1,4 @@
+/* eslint-disable no-nested-ternary */
 /* eslint-disable @typescript-eslint/no-non-null-assertion */
 import { ButtonComponent, ButtonStyles } from 'discordeno/types';
 import { createCommand } from '../../structures/command/createCommand';
@@ -13,6 +14,8 @@ import { Plants } from '../../modules/fazendinha/constants';
 import { AvailablePlants } from '../../modules/fazendinha/types';
 import farmerRepository from '../../database/repositories/farmerRepository';
 import { addItems } from '../../modules/fazendinha/siloUtils';
+import { DatabaseUserSchema } from '../../types/database';
+import { getUniqueDaily } from '../../modules/dailies/calculateUserDailies';
 
 const getDailyStatus = (daily: DatabaseDaily): 'reedem' | 'unfinished' | 'reedemed' =>
   // eslint-disable-next-line no-nested-ternary
@@ -31,11 +34,128 @@ const getAwardEmoji = (ctx: InteractionContext, award: Award<string | number>): 
   }
 };
 
-const redeemInteractions = async (ctx: ComponentInteractionContext): Promise<void> => {
+const getMissionsEmbed = (
+  ctx: InteractionContext,
+  user: DatabaseUserSchema,
+  userDailies: DatabaseDaily[],
+  isChangeEmbed: boolean,
+) =>
+  createEmbed({
+    title: ctx.prettyResponse(
+      'calendar',
+      isChangeEmbed ? 'commands:daily.change-title' : 'commands:daily.title',
+    ),
+    color: hexStringToNumber(user.selectedColor),
+    footer: isChangeEmbed ? { text: ctx.locale('commands:daily.change-footer') } : undefined,
+    description: `- ${userDailies
+      .map((d) => {
+        const daily = getDailyById(d.id);
+        return ctx.locale(`commands:daily.descriptions.${daily.type}`, {
+          ...d,
+          specification: daily.specificationDisplay?.(ctx, d.specification!) ?? d.specification,
+          count: d.need,
+          emoji: isChangeEmbed
+            ? ctx.safeEmoji('swap')
+            : d.has < d.need
+            ? ctx.safeEmoji('hourglass')
+            : d.redeemed
+            ? ctx.safeEmoji('success')
+            : ctx.safeEmoji('gift'),
+        });
+      })
+      .join('\n- ')}`,
+  });
+
+const getMissionButtons = (
+  ctx: InteractionContext,
+  userDailies: DatabaseDaily[],
+  action: 'REEDEM' | 'CHANGE',
+) =>
+  userDailies.map((daily, index) =>
+    createButton({
+      label:
+        action === 'CHANGE'
+          ? ctx.locale('commands:daily.change', { index: index + 1 })
+          : ctx.locale(`commands:daily.${getDailyStatus(daily)}`, {
+              index: index + 1,
+              need: daily.need,
+              has: daily.has,
+            }),
+      style:
+        action === 'CHANGE'
+          ? ButtonStyles.Danger
+          : getDailyStatus(daily) === 'reedem'
+          ? ButtonStyles.Success
+          : ButtonStyles.Secondary,
+      customId: createCustomId(0, ctx.user.id, ctx.originalInteractionId, action, index),
+      disabled: action !== 'CHANGE' && getDailyStatus(daily) !== 'reedem',
+    }),
+  ) as [ButtonComponent];
+
+const changeDaily = async (
+  ctx: ComponentInteractionContext,
+  userDailies: DatabaseDaily[],
+  dailyIndex: number,
+): Promise<void> => {
+  const userDaily = getUniqueDaily(userDailies);
+  userDailies[dailyIndex] = { ...userDaily, changed: true };
+
+  await userRepository.updateUser(ctx.user.id, { dailies: userDailies });
+
+  const daily = getDailyById(userDaily.id);
+
+  const newDailyDescription = ctx.locale(`commands:daily.descriptions.${daily.type}`, {
+    ...userDaily,
+    specification:
+      daily.specificationDisplay?.(ctx, userDaily.specification!) ?? userDaily.specification,
+    count: userDaily.need,
+    emoji: ctx.safeEmoji('swap'),
+  });
+
+  ctx.makeMessage({
+    content: ctx.prettyResponse('success', 'commands:daily.success-changed', {
+      newDaily: newDailyDescription,
+      index: dailyIndex + 1,
+    }),
+    components: [],
+    embeds: [],
+  });
+};
+
+const handleButtonInteractions = async (ctx: ComponentInteractionContext): Promise<void> => {
   const [action, dailyIndex, itemIndex] = ctx.sentData;
 
   const user = await userRepository.ensureFindUser(ctx.user.id);
-  const missionToReedem = (await getUserDailies(user))[Number(dailyIndex)];
+  const userDailies = await getUserDailies(user);
+
+  const cannotChange = userDailies.some((d) => d.changed);
+
+  if (action === 'DISPLAY_CHANGE') {
+    if (cannotChange)
+      return ctx.makeMessage({
+        components: [],
+        embeds: [],
+        content: ctx.prettyResponse('error', 'commands:daily.already-changed'),
+      });
+
+    const embed = getMissionsEmbed(ctx, user, userDailies, true);
+    const buttons = getMissionButtons(ctx, userDailies, 'CHANGE');
+
+    return ctx.makeMessage({ components: [createActionRow(buttons)], embeds: [embed] });
+  }
+
+  if (action === 'CHANGE') {
+    if (cannotChange)
+      return ctx.makeMessage({
+        components: [],
+        embeds: [],
+        content: ctx.prettyResponse('error', 'commands:daily.already-changed'),
+      });
+
+    return changeDaily(ctx, userDailies, Number(dailyIndex));
+  }
+
+  const missionToReedem = userDailies[Number(dailyIndex)];
 
   if (missionToReedem.need > missionToReedem.has)
     return ctx.makeMessage({
@@ -90,6 +210,10 @@ const redeemInteractions = async (ctx: ComponentInteractionContext): Promise<voi
         ]);
         break;
       }
+      default:
+        throw new Error(
+          `The selected award of type ${selectedAward.type} was not implemented to be given`,
+        );
     }
 
     missionToReedem.redeemed = true;
@@ -150,46 +274,26 @@ const DailyCommand = createCommand({
   descriptionLocalizations: { 'en-US': '「📅」・See and reedem your daily missions' },
   category: 'info',
   authorDataFields: ['dailies', 'dailyDayId', 'selectedColor', 'estrelinhas'],
-  commandRelatedExecutions: [redeemInteractions],
+  commandRelatedExecutions: [handleButtonInteractions],
   execute: async (ctx, finishCommand) => {
     finishCommand();
 
     const userDailies = await getUserDailies(ctx.authorData);
 
-    const embed = createEmbed({
-      title: ctx.prettyResponse('calendar', 'commands:daily.title'),
-      color: hexStringToNumber(ctx.authorData.selectedColor),
-      description: `- ${userDailies
-        .map((d) => {
-          const daily = getDailyById(d.id);
-          return ctx.locale(`commands:daily.descriptions.${daily.type}`, {
-            ...d,
-            specification: daily.specificationDisplay?.(ctx, d.specification!) ?? d.specification,
-            count: d.need,
-            emoji:
-              // eslint-disable-next-line no-nested-ternary
-              d.has < d.need
-                ? ctx.safeEmoji('hourglass')
-                : d.redeemed
-                ? ctx.safeEmoji('success')
-                : ctx.safeEmoji('gift'),
-          });
-        })
-        .join('\n- ')}`,
-    });
+    const embed = getMissionsEmbed(ctx, ctx.authorData, userDailies, false);
 
-    const buttons = userDailies.map((daily, index) =>
+    const buttons = getMissionButtons(ctx, userDailies, 'REEDEM');
+
+    const cannotChangeDaily = userDailies.some((d) => d.changed);
+
+    buttons.push(
       createButton({
-        label: ctx.locale(`commands:daily.${getDailyStatus(daily)}`, {
-          index: index + 1,
-          need: daily.need,
-          has: daily.has,
-        }),
-        style: getDailyStatus(daily) === 'reedem' ? ButtonStyles.Success : ButtonStyles.Secondary,
-        customId: createCustomId(0, ctx.user.id, ctx.originalInteractionId, 'REEDEM', index),
-        disabled: getDailyStatus(daily) !== 'reedem',
+        label: ctx.locale('commands:daily.change-daily'),
+        style: ButtonStyles.Secondary,
+        customId: createCustomId(0, ctx.user.id, ctx.originalInteractionId, 'DISPLAY_CHANGE'),
+        disabled: cannotChangeDaily,
       }),
-    ) as [ButtonComponent];
+    );
 
     ctx.makeMessage({ embeds: [embed], components: [createActionRow(buttons)] });
   },
