@@ -30,6 +30,7 @@ export const EMOJIS = {
   heart: '❤️',
   roll: '🔑',
   lick: '👅',
+  swap: '🔀',
   time: '⏲️',
   sword: '⚔️',
   gay_flag: '🏳️‍🌈',
@@ -112,6 +113,7 @@ export const TOP_EMOJIS: { [key: string]: string } = {
   demigods: EMOJIS.demigods,
   gods: EMOJIS.gods,
   votes: EMOJIS.ok,
+  rolls: EMOJIS.roll,
   blackjack: '🃏',
   coinflip: '📀',
   roulette: '🎡',
