@@ -76,7 +76,6 @@ const vanGoghRequest = async <T>(route: VanGoghEndpoints, data: T): Promise<VanG
   return {
     err: false,
     data: new Blob([Buffer.from(result.data, 'base64')], {
-      encoding: 'base64',
       type: 'image/png',
     }),
   };
